[package]
name = "lightning"
version = "0.0.1"
authors = ["Inference Labs Inc"]
description = "Dendrite - but lightning fast"
license = "MIT"
repository = "https://github.com/inference-labs-inc/lightning"
edition = "2021"

[lib]
name = "lightning"
crate-type = ["cdylib"]

[dependencies]
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
rcgen = "0.12"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
hex = "0.4"
bs58 = "0.4"
sha2 = "0.10"
rand = "0.7"
sp-core = "21.0"
socket2 = "0.5"

[build-dependencies]
pyo3-build-config = "0.20"
