[package]
name = "lightning-bench"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[[bin]]
name = "lightning-bench"
path = "src/main.rs"

[dependencies]
btlightning = { path = "../crates/btlightning" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sp-core = "34.0"
rmpv = { version = "1", features = ["with-serde"] }
rmp-serde = "1"
async-trait = "0.1"
rand = "0.8"
