[package]
name = "btlightning-py"
version = "0.1.0"
authors = ["Inference Labs Inc"]
description = "Python bindings for btlightning QUIC transport"
license = "MIT"
repository = "https://github.com/inference-labs-inc/lightning"
edition = "2021"

[lib]
name = "btlightning"
crate-type = ["cdylib"]

[dependencies]
btlightning = { path = "../btlightning", features = ["btwallet"] }
pyo3 = { version = "0.26", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
rmpv = { version = "1", features = ["with-serde"] }
async-trait = "0.1"

openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
pyo3-build-config = "0.26"
