[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "btlightning"
version = "0.1.0"
description = "QUIC transport layer for Bittensor"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Inference Labs Inc" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"
module-name = "btlightning._native"
features = ["pyo3/extension-module"]
bindings = "pyo3"
