[package]
name = "btlightning"
version = "0.1.0"
authors = ["Inference Labs Inc"]
description = "QUIC transport layer for Bittensor"
license = "MIT"
repository = "https://github.com/inference-labs-inc/lightning"
edition = "2021"

[lib]
name = "btlightning"

[dependencies]
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
async-trait = "0.1"
tracing = "0.1"
base64 = "0.21"
rand = "0.8"
sp-core = "21.0"
bittensor_wallet = { git = "https://github.com/opentensor/btwallet", rev = "bff16fd6a823474e49ef53fa689249f9d9ddb745", default-features = false, optional = true }

[features]
btwallet = ["bittensor_wallet"]
