[package]
name = "btlightning"
version = "0.1.0"
authors = ["Inference Labs Inc"]
description = "QUIC transport layer for Bittensor"
license = "MIT"
repository = "https://github.com/inference-labs-inc/lightning"
edition = "2021"
rust-version = "1.88"

[lib]
name = "btlightning"

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
rcgen = "0.13"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
async-trait = "0.1"
tracing = "0.1"
base64 = "0.22"
rand = "0.8"
sp-core = "34.0"
bittensor_wallet = { git = "https://github.com/opentensor/btwallet", rev = "bff16fd6a823474e49ef53fa689249f9d9ddb745", default-features = false, optional = true }
parity-scale-codec = { version = "3", optional = true, features = ["derive"] }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
proptest = "1"

[features]
btwallet = ["bittensor_wallet"]
subtensor = ["dep:subxt", "dep:parity-scale-codec", "dep:futures-util"]
subtensor-tests = ["subtensor"]

[dependencies.subxt]
version = "0.38"
optional = true
features = ["substrate-compat"]
