[package]
name = "btlightning"
version = "0.1.0"
authors = ["Inference Labs Inc"]
description = "QUIC transport layer for Bittensor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inference-labs-inc/lightning"
edition = "2021"
rust-version = "1.88"

[lib]
name = "btlightning"

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
rcgen = "0.13"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
async-trait = "0.1"
tracing = "0.1"
base64 = "0.22"
indexmap = "2"
rand = "0.8"
sp-core = "34.0"
bittensor_wallet = { version = "4.0.1", package = "btwallet", default-features = false, optional = true }
parity-scale-codec = { version = "3", optional = true, features = ["derive"] }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
proptest = "1"
serde_json = "1"
anyhow = "1"
subxt-signer = { version = "0.38", features = ["sr25519"] }
tempfile = "3"

[features]
btwallet = ["bittensor_wallet"]
subtensor = ["dep:subxt", "dep:parity-scale-codec", "dep:futures-util"]
subtensor-tests = ["subtensor"]
localnet-tests = ["subtensor"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies.subxt]
version = "0.38"
optional = true
features = ["substrate-compat"]
